--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,7 @@
               }
             ],
             "styles": [
+              "node_modules/bulma/css/bulma.css",
               "src/styles.scss"
             ],
             "scripts": [],
